manifest/deployment.yaml
kind: Deployment 
apiVersion: extensions/v1beta1
metadata:
  namespace: default 
  name: gossip-dev 
spec:
  replicas: 3 
  template:
    metadata:
      labels:
        component: gossip-dev
    spec:
      serviceAccountName: admin
      nodeSelector:
        kubernetes.io/hostname: 192.168.100.161 
      containers:
        - name: gossip-dev
          image: gmt.reg.me/test/gossip-dev:v1
          imagePullPolicy: Always
          volumeMounts:
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
