manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: gossip-dev-headless 
spec:
  clusterIP: None 
  selector:
    component: gossip-dev
  ports:
    - port: 80 
      targetPort: 80 
      name: http
